# multimodalagentframework

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  connectors.py  function_schema_generator.py  helper_functions.py  logging_config.py  multimodal_agent.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci-cd.yml
examples/: __init__.py  conversation_handoff_example.py  conversation_handoff_with_storage_example.py  response_summary_agent.py
multimodal_agent_framework/: __init__.py  connectors.py  function_schema_generator.py  helper_functions.py  logging_config.py  multimodal_agent.py  token_tracker.py
multimodal_agent_framework/configs/: __init__.py  azure_opensource_config.py  base_config.py  claude_config.py  openai_config.py
multimodal_agent_framework/connectors/: __init__.py  azure_opensource_connector.py  base.py  claude_connector.py  openai_connector.py
multimodal_agent_framework/conversation_manager/: __init__.py  agent_conversation.py  agent_conversation_manager.py
multimodal_agent_framework/conversation_manager/storage/: __init__.py  base_storage.py  file_storage.py  s3_storage.py
scripts/: check_black.py
tests/: __init__.py  test_connectors.py  test_function_schema_generator.py  test_installation.py  test_multimodal_agent.py
